--- a/View/css/styling.css
+++ b/View/css/styling.css
@@ -27,7 +27,20 @@ background-color: darksalmon;
 }
 
 #tablestudents{
-    width: 70%;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#tablestudentdetail{
+    width: 30%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+}
+
+#p{
     margin-left: auto;
     margin-right: auto;
 }
@@ -52,5 +65,6 @@ footer{
 }
 
 #wrapcreate{
-    width: 30px;
+    text-align:center;
 }
+
